# ZYRION

./: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  compose.yaml  run.bash
contract/: Cargo.toml  linera.json
contract/src/: lib.rs
service/: Cargo.toml  linera.json
service/src/: lib.rs
zyrion/zyrion/frontend/: ADD_BETS_COLUMN.sql  ENV_SETUP.txt  SUPABASE_SCHEMA.sql  SUPABASE_SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
zyrion/zyrion/frontend/src/: App.tsx  index.css  vite-env.d.ts
zyrion/zyrion/frontend/src/components/: BettingModal.tsx  DarkVeil.css  ElectricBorder.tsx  Header.tsx  MarketCard.tsx  SimulationFeed.tsx  Toast.tsx
zyrion/zyrion/frontend/src/lib/: contract.ts  linera.ts  mockMarkets.ts  mockMode.ts  supabase.ts  wallet.ts
zyrion/zyrion/frontend/src/pages/: CreateMarketPage.tsx  HomePage.tsx  MarketDetailPage.tsx
zyrion/zyrion/frontend/src/types/: index.ts
