[package]
name = "prediction-market"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol", branch = "main", features = ["test"] }

