[package]
name = "prediction-market-service"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol", branch = "main" }
async-graphql = "5.0"
async-graphql-warp = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
async-trait = "0.1"

prediction-market = { path = "../contract" }
